Database thingy update.
Author: dustin
Date: 2000/05/01 04:32:18

imported from: dustin@spy.net--projects/snippets--java--1.0--patch-250

--- a/java/java/showpic.html
+++ b/java/java/showpic.html
@@ -5,7 +5,7 @@
 
 <applet
 code="Showpic2.class" width="108" height="108">
-<param name="image" value="q1.gif">
+<param name="image" value="http://bleu.west.spy.net/~dustin/images/spy1.jpg">
 </applet>
 </center>
 
