Added gimp to the credits.
Author: dustin
Date: 2002/10/10 07:29:09

Fixed the stupid window title.

imported from: dustin@spy.net--projects/snippets--objc--1.0--patch-43

--- a/objc/objc/osx/PhotoUpload/Credits.html
+++ b/objc/objc/osx/PhotoUpload/Credits.html
@@ -5,6 +5,11 @@
 		<a href="http://photoservlet.sf.net/">photoservlet</a>.
 		</p>
 
+        <p>
+            The icon was made with <a href="http://www.gimp.org/">gimp</a>.
+            The lack of creativity was my own.
+        </p>
+
 		<p>
 		This software includes frameworks written by
 		<a href="http://mulle-kybernetik.com/software/EDFrameworks/">
