--- a/objc/objc/osx/Thermometer/Help/index.html
+++ b/objc/objc/osx/Thermometer/Help/index.html
@@ -49,6 +49,27 @@ backyard
 
 			<code>16.86</code>
 		</p>
+
+		<h2>The Display</h2>
+		<p>
+
+			Each thermometer contains two basic data elements:
+
+			<ul>
+				<li>The current reading (below the center)</li>
+				<li>The trend (above the center)</li>
+			</ul>
+
+			The current reading is the reading as of the last update (seen at the
+			bottom of the window).  The trend is the difference between the
+			current reading and the reading ten samples ago.
+
+			</p>
+			<p>
+			For example, if your sample rate is 300 (once every five minutes),
+			and your current reading is 35.81, and the trend is -0.21, then the
+			temperature has fallen .21 degrees in the last 50 minutes.
+		</p>
 	</body>
 </html>
 
