Either clarified or complicated my help some.
Author: dustin
Date: 2003/05/28 23:29:50

imported from: dustin@spy.net--projects/snippets--objc--1.0--patch-90

--- a/objc/objc/osx/Thermometer/Help/index.html
+++ b/objc/objc/osx/Thermometer/Help/index.html
@@ -62,13 +62,13 @@ backyard
 
 			The current reading is the reading as of the last update (seen at the
 			bottom of the window).  The trend is the difference between the
-			current reading and the reading ten samples ago.
-
-			</p>
-			<p>
+			current reading and the oldest reading you have up to ten samples ago.
+		</p>
+		<p>
 			For example, if your sample rate is 300 (once every five minutes),
 			and your current reading is 35.81, and the trend is -0.21, then the
-			temperature has fallen .21 degrees in the last 50 minutes.
+			temperature has fallen .21 degrees in the last 50 minutes as long as
+			you've had the application running at least that long.
 		</p>
 	</body>
 </html>
