--- a/js/dragdrop/workflow.html
+++ b/js/dragdrop/workflow.html
@@ -31,6 +31,7 @@
 			margin: 1px;
 			padding: 5px;
 			border: solid 1px black;
+			cursor: move;
 		}
 
 		#workItems {
@@ -226,6 +227,7 @@
 			workflow.list[i].x2=theItem.offsetWidth + theItem.offsetLeft;
 			workflow.list[i].y2=theItem.offsetTop + theItem.offsetHeight;
 		}
+		findWorkflow();
 	}
 
 	// Return true if the dragOb is over the workflow area
