Replaced the ol with a cl since I don't do any ordering anyway
imported from: dustin@spy.net--snippets/js--main--1.0--patch-6

--- a/js/dragdrop/workflow.html
+++ b/js/dragdrop/workflow.html
@@ -19,7 +19,7 @@
 			margin: 5px;
 		}
 
-		#workFlowManager ul, #workFlowManager ol {
+		#workFlowManager ul {
 			padding: 0px;
 			margin: 0px;
 			list-style: none;
@@ -303,8 +303,8 @@
 					Drag items here to create a workflow.
 				</div>
 				<form method="POST" action="">
-					<ol id="workFlowList">
-					</ol>
+					<ul id="workFlowList">
+					</ul>
 				</form>
 			</div>
 		</div>
