Less space around the workflow hint.
imported from: dustin@spy.net--snippets/js--main--1.0--patch-7

--- a/js/dragdrop/workflow.html
+++ b/js/dragdrop/workflow.html
@@ -49,9 +49,14 @@
 		#workFlowHint {
 			color: gray;
 			background: white;
-			padding-top: 75px;
-			padding-bottom: 75px;
+			padding-top: 5px;
+			padding-bottom: 5px;
 			text-align: center;
+		}
+
+		form {
+			margin: 0px;
+			padding: 0px;
 		}
 	</style>
 	</head>
@@ -310,4 +315,3 @@
 		</div>
 	</body>
 </html>
-
