Remove an object immediately when dragging away.
imported from: dustin@spy.net--snippets/js--main--1.0--patch-15

--- a/js/dragdrop/workflow.html
+++ b/js/dragdrop/workflow.html
@@ -209,6 +209,7 @@
 		if(!isNew) {
 			var removing=workflow.list.splice(dragOb.itemIndex, 1);
 			dragOb.movingObject=removing[0];
+			reDisplay();
 		}
 	}
 
